tests/ui/proc-macro/two-crate-types-2.rs
//@ compile-flags: --crate-type rlib --crate-type proc-macro
//@ force-host

//~? ERROR cannot mix `proc-macro` crate type with others
